[package]
name = "not-your-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
aws-config = "0.12.0"
aws-sdk-dynamodb = "0.12.0"
aws-types = { version = "0.12.0" }