[package]
name = "not-your-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
aws-config = "0.13.0"
aws-sdk-dynamodb = "0.13.0"
aws-types = { version = "0.13.0" }
uuid = { version = "1.1.1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_13"] }